--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
 	"files.associations": {
 		"cmath": "cpp"
 	},
-	"cmake.configureOnOpen": true
+	"cmake.sourceDirectory": "${workspaceFolder}/TestLyb"
+
 }
