--- a/2022-2023-project-3-harfang3d-binding-Project-3-group.fsproj
+++ b/2022-2023-project-3-harfang3d-binding-Project-3-group.fsproj
@@ -9,11 +9,10 @@
 <ItemGroup>
 	<Compile Include="vector.fs" />
 	<Compile Include="Test/testVector.fs" />
+	<Compile Include="main.fs" />
 	<None Include="TestLyb/lib/libvector.dylib">
     <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
   </None>
-
-
 </ItemGroup>
 
 <ItemGroup>
