First Example of Vector done

--- a/VectorExample/2022-2023-project-3-harfang3d-binding-Project-3-group.fsproj
+++ b/VectorExample/2022-2023-project-3-harfang3d-binding-Project-3-group.fsproj
@@ -10,7 +10,7 @@
 	<Compile Include="vector.fs" />
 	<Compile Include="Test/testVector.fs" />
 	<Compile Include="main.fs" />
-	<None Include="TestLyb/lib/libvector.dylib">
+	<None Include="lib/libvector.dylib">
     <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
   </None>
 </ItemGroup>
